# Laba5b

./: CMakeLists.txt  main.c
libs/algorithms/: algorithms.c  algorithms.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/string_/: string_.c  string_.h
libs/data_structures/string_/tasks/: string_.c  string_.h
libs/data_structures/vector/: vector.c  vector.h
